made some edits

--- a/static_pages/about.mdx
+++ b/static_pages/about.mdx
@@ -8,6 +8,9 @@ excerpt: ''
 image: https://imgur.com/C6GBjJt.png
 ---
 
+<h2>Who I Am</h2>
+<p>I am not your average developer</p>
+
 Hey, I am Mark Landeryou. A Front-end Developer/React Developer from India who loves to design and code. I use React.js or Next.js to build the web application interfaces and the functionalities. At the moment, I am pursuing my Bachelor's degree in Computer Science.
 
 My interest in computers started at a very young age, and I was very eager to learn as much as I could about them. I remember my first website that I made years ago, which had a terrible interface and design. The purpose of it was to download pirated movies and stuff like that. It is unfortunate that I don't have the code.
